hugo-docs/middleware-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: default
spec:
  basicAuth:
    users:
      - "admin:$(htpasswd -nb admin password)"
